Update copy on various pages

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,22 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
-@import './base/base';
-@import './base/button';
-@import './base/card';
-@import './base/mixins';
-@import './base/settings';
-@import './base/typography';
-@import './base/utilities';
-@import './components/AboutUsPage';
-@import './components/ArticlePage';
-@import './components/BlogPage';
-@import './components/ContactPage';
-@import './components/CarouselHome';
-@import './components/Footer';
-@import './components/HomePage';
-@import './components/HackathonTeamsPage';
-@import './components/NotFoundPage';
-@import './components/PageHeader';
-@import './components/ProjectsPage';
-@import './components/RecruitmentPage';
-@import './components/TeamPage';
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
+@import "./base/base";
+@import "./base/button";
+@import "./base/card";
+@import "./base/mixins";
+@import "./base/settings";
+@import "./base/typography";
+@import "./base/utilities";
+@import "./components/AboutUsPage";
+@import "./components/ArticlePage";
+@import "./components/BlogPage";
+@import "./components/ContactPage";
+@import "./components/CarouselHome";
+@import "./components/Footer";
+@import "./components/HomePage";
+@import "./components/HackathonTeamsPage";
+@import "./components/NotFoundPage";
+@import "./components/PageHeader";
+@import "./components/ProjectsPage";
+@import "./components/RecruitmentPage";
+@import "./components/TeamPage";
+@import "./components/WorkshopPage";
 // @import "node_modules/react-alice-carousel/lib/scss/alice-carousel.scss";
