--- a/src/styles/base/_card.scss
+++ b/src/styles/base/_card.scss
@@ -1,82 +1,87 @@
 .card {
-    display: flex;
-    flex-direction: column;
-    background-color: $color-white;
-    border-radius: .5rem;
+  display: flex;
+  flex-direction: column;
+  background-color: $color-white;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  box-shadow: 0 0.2rem 0.8rem rgba(0, 0, 0, 0.2);
+  color: inherit;
+
+  &--clickable {
+    transition: all 0.2s;
+
+    &:hover {
+      transform: translateY(-3px);
+      color: $color-blue;
+    }
+  }
+
+  &__content {
+    padding: $l-size;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: $m-size;
+    }
+  }
+
+  &__content--center {
+    text-align: center;
+    padding: $m-size $l-size;
+  }
+
+  &__image-box {
+    width: 100%;
+    max-height: 55rem;
     overflow: hidden;
-    box-shadow: 0 .2rem .8rem rgba(0,0,0,.2);
-    color: inherit;
 
-    &--clickable {
-        transition: all .2s;
-
-        &:hover {
-            transform: translateY(-3px);
-            color: $color-blue;
-        }
+    img {
+      display: block;
+      width: 100%;
     }
-
-    &__content {
-        padding: $l-size;
-
-        @media only screen and (max-width: $bp-small) {
-            padding: $m-size;
-        }
-    }
-
-    &__content--center {
-        text-align: center;
-        padding: $m-size $l-size;
-    }
-
-    &__image-box {
-        width: 100%;
-        max-height: 55rem;
-        overflow: hidden;
-
-        img {
-            display: block;
-            width: 100%;
-        }
-    }
+  }
 }
 
 .card-horizontal {
-    display: flex;
-    background-color: $color-white;
-    padding: $m-size;
-    border-radius: .5rem;
-    overflow: hidden;
-    box-shadow: 0 .2rem .8rem rgba(0,0,0,.2);
-    color: inherit;
+  display: flex;
+  background-color: $color-white;
+  padding: $m-size;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  box-shadow: 0 0.2rem 0.8rem rgba(0, 0, 0, 0.2);
+  color: inherit;
+
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
+
+  &--clickable {
+    transition: all 0.2s;
+
+    &:hover {
+      transform: translateY(-3px);
+      color: $color-blue;
+    }
+  }
+
+  &__content {
+    padding: $l-size;
 
     @media only screen and (max-width: $bp-medium) {
-        flex-direction: column;
+      padding: $m-size;
     }
+  }
 
-    &--clickable {
-        transition: all .2s;
+  &__image-box {
+    flex: 0 0 20%;
 
-        &:hover {
-            transform: translateY(-3px);
-            color: $color-blue;
-        }
+    span {
+      display: inline-block;
+      height: 100%;
+      vertical-align: middle;
     }
-
-    &__content {
-        padding: $l-size;
-
-        @media only screen and (max-width: $bp-medium) {
-            padding: $m-size;
-        }
+    img {
+      width: 100%;
+      vertical-align: middle;
     }
-
-    &__image-box {
-        flex: 0 0 20%;
-
-        img {
-            display: block;
-            width: 100%;
-        }
-    }
+  }
 }
