--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,6 +16,7 @@
 @import "./components/HackathonTeamsPage";
 @import "./components/NotFoundPage";
 @import "./components/PageHeader";
+@import "./components/PastWebinarPage";
 @import "./components/ProjectsPage";
 @import "./components/RecruitmentPage";
 @import "./components/TeamPage";
