Update h4g page logo and timeline

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,7 @@
 @import "./components/Footer";
 @import "./components/HomePage";
 @import "./components/HackathonTeamsPage";
+@import "./components/Hack4GoodPage";
 @import "./components/NotFoundPage";
 @import "./components/PageHeader";
 @import "./components/PastWebinarPage";
