--- a/src/styles/components/_Hack4GoodPage.scss
+++ b/src/styles/components/_Hack4GoodPage.scss
@@ -122,7 +122,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 20px 40px;
+
+  @media screen and (max-width: $bp-small) {
+    flex-direction: column;
+  }
+
+  margin: 0 20px;
 }
 
 .h4g-problem-statement-component-img-container {
@@ -131,36 +136,20 @@
     max-height: 100px;
   }
 
-  @media screen and (max-width: $bp-small) {
-    img {
-      max-width: 100px;
-      max-height: 50px;
-    }
-
-    min-width: 150px;
-    margin: 10px;
-  }
-
-  @media screen and (max-width: $bp-smallest) {
-    img {
-      max-width: 100px;
-      max-height: 50px;
-    }
-
-    min-width: 120px;
-    margin: 10px;
-  }
-
   margin: 30px;
-  min-width: 230px;
+  min-width: 200px;
   text-align: center;
 }
 
 .h4g-problem-statements-container {
   max-width: 1000px;
-  margin: auto;
+  margin: 0 auto;
+  margin-bottom: 100px;
 }
 
 .h4g-problem-statement-description-container {
   max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
