feat: modify recruitment page
Modify header and frontpage to promote recruitment.

Fix recent event cards.

--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -37,6 +37,7 @@
     padding: $s-size $m-size;
     background-color: $color-yellow;
     color: $color-white;
+    font-weight: bold!important;
     border-radius: 10px;
 
     &:hover {
