--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,7 +2,6 @@
     color: $color-white;
     text-transform: uppercase;   
     backface-visibility: hidden;
-    margin-bottom: $xl-size;
     text-align: center;
     text-shadow: .2rem .5rem .5rem rgba($color-dark-grey, 0.5);
  
@@ -22,6 +21,7 @@
     }
     
     &--sub {
+        color: $color-white;
         display: block;
         font-size: 2rem;
         font-weight: 700;
