--- a/src/styles/components/_RecruitmentPage.scss
+++ b/src/styles/components/_RecruitmentPage.scss
@@ -56,6 +56,7 @@
     &__description {
         font-size: inherit;
         @include center-text-box();
+        padding-bottom: 24px;
     }
     &__roles-title {
         margin-top: 4vh;
